--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,12 @@
             {
                 "match": "\\.(py$)",
                 "isShellCommand": false,
-                "cmd": "workbench.action.debug.restart"
+                "cmd": "" //workbench.action.debug.restart
             }
         ]
-    }
+    },
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
+    "python.formatting.provider": "none"
 }
