--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,15 @@
 {
-    "saveAndRunExt": {
-        "commands": [
-            {
-                "match": "\\.(py$)",
-                "isShellCommand": false,
-                "cmd": "workbench.action.debug.restart"
-            }
-        ]
-    }
+  "saveAndRunExt": {
+    "commands": [
+      {
+        "match": "\\.(py$)",
+        "isShellCommand": false,
+        "cmd": ""
+      }
+    ]
+  },
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  },
+  "python.formatting.provider": "none"
 }
